Check for invalid characters (for windows that is) in torrent name on windows

BUG: 187373

svn path=/branches/stable/extragear-kde4/network/ktorrent/; revision=942840